// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CommentDataloaderService > load > should load many 1`] = `
[
  {
    "include": {
      "revisions": {
        "orderBy": {
          "createdAt": "asc",
        },
      },
    },
    "where": {
      "id": {
        "in": [
          "123",
          "321",
        ],
      },
    },
  },
]
`;

exports[`CommentDataloaderService > load > should load one 1`] = `
[
  {
    "include": {
      "revisions": {
        "orderBy": {
          "createdAt": "asc",
        },
      },
    },
    "where": {
      "id": {
        "in": [
          "123",
        ],
      },
    },
  },
]
`;

exports[`CommentDataloaderService > should prime 1`] = `
[
  "123",
  {},
]
`;
